infra/k8s/posts-depl.yaml
# muito similar a criação de pod
apiVersion: apps/v1
# tipo do objeto
kind: Deployment
metadata:
  name: posts-depl
spec:
  # replicas é o numero de pods que eu quero criar
  # que irá rodar uma imagem
  replicas: 1
  # procure todos os pods com o label posts
  selector:
    matchLabels:
      app: posts
  # template é onde nos especificamos a exata
  # especificação de um pod
  template:
    metadata:
      labels:
        app: posts
    # descrevendo a especificação ou opções de configuração
    # do pod que queremos criar
    spec:
      containers:
        - name: posts
          image: williangrios/posts
          # image: williangrios/posts
# nova configuração para criar o novo Cluster IP Serviec
# o --- é para griar multiplos objetos dentro do mesmo yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  # vamos configurar o selector que vai dizer ao serviço qual POD será acessado
  selector:
    app: posts
  # type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
