infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    # here, we are telling the service to try to find all the
    # different pods with a label of app posts and expose traffic
    # or expose those pods to the outside world
    app: posts
  # this section is going to list out all the different ports that we
  # want to expose on the target POD
  ports:
    - name: posts
      protocol: TCP
      # target: the Node Port Service port
      port: 4000
      # targetPort: is the port that our application (index.ts) is listing for traffic on
      targetPort: 4000
