infra/k8s/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     # o ingress controller vai ficar escaneando continuamente todos os diferentes
#     # objetos ou todos os config files que colocamos no nosso cluster e vai encontrar um
#     # que tem essa exata annotation
# spec:
#   rules:
#     - host: posts.com
#       http:
#         paths:
#           - path: /posts
#             backend:
#               serviceName: posts-clusterip-srv
#               servicePort: 4000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    # o ingress controller vai ficar escaneando continuamente todos os diferentes
    # objetos ou todos os config files que colocamos no nosso cluster e vai encontrar um
    # que tem essa exata annotation
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix0


























































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































































            000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000.
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
